made changes to the timer

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 					radial-gradient(100% 100% at calc( 80% - var(--x)) calc( 0% - var(--y)), rgb(250 255 000), rgb(036 000 000)), 
 					radial-gradient(150% 210% at calc(100% + var(--x)) calc( 0% + var(--y)), rgb(020 175 125), rgb(000 010 255)), 
 					radial-gradient(100% 100% at calc(100% - var(--x)) calc(30% - var(--y)), rgb(255 077 000), rgb(000 200 255)), 
-					linear-gradient(60deg, #fed841, rgb(201, 97, 0));
+					linear-gradient(60deg, #fe8d41, rgb(201, 97, 0));
 					
 				background-blend-mode: overlay, overlay, difference, difference, difference, normal;
 			}
