made a change in the css of body tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 		<style>
 			body{
 				padding: 0;
-				height:100vh;
 				margin: 0;
 				transition: 0.5s;
 				--x: calc(var(--posX, 0) * 1px);
@@ -22,6 +21,8 @@
 					linear-gradient(60deg, #fe8d41, rgb(201, 97, 0));
 					
 				background-blend-mode: overlay, overlay, difference, difference, difference, normal;
+				background-repeat: no-repeat;
+				background-size: cover;
 			}
 		</style>
 		<title>CodeFiesta</title>
