--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
 		*::selection {
 			color: #000;
-			background-color: #fe8d41;
+			background-color: var(--theme1);
 		}
 
 		body {
@@ -28,21 +28,6 @@
 			margin: 0;
 			padding: 0;
 			background-color: #000 !important;
-			/* transition: 0.5s;
-			--x: calc(var(--posX, 0) * 1px);
-			--y: calc(var(--posY, 0) * 1px);
-			background:
-				linear-gradient(115deg, #FFDAB9, #E34234),
-				radial-gradient(90% 100% at calc(50% + var(--x)) calc(0% + var(--y)), #FF4E00, #363636),
-				radial-gradient(100% 100% at calc(80% - var(--x)) calc(0% - var(--y)), #000, #FF4E00),
-				radial-gradient(150% 210% at calc(100% + var(--x)) calc(0% + var(--y)), #FF4500, #B7410E),
-				radial-gradient(100% 100% at calc(100% - var(--x)) calc(30% - var(--y)), #FFA07A, #FFD700),
-				linear-gradient(60deg, #fe8d41, #E34234);
-
-			background-blend-mode: overlay, overlay, difference, difference, difference, normal;
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: center; */
 		}
 
 		body::-webkit-scrollbar {
