added meta images, setup firebase, & changed the date in timer.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>/favicon-16x16.png">
+	<link rel="manifest" href="<%= BASE_URL %>/site.webmanifest">
 	<style>
 		:root {
 			--theme1: #fe8d41;
@@ -35,6 +39,22 @@
 		}
 	</style>
 	<title>CodeFiesta</title>
+	<meta name="title" content="CodeFiesta" />
+	<meta name="description" content="CodeFiesta is the flagship coding festival of Lucknow." />
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://code-fiesta.web.app/" />
+	<meta property="og:title" content="CodeFiesta" />
+	<meta property="og:description" content="CodeFiesta is the flagship coding festival of Lucknow." />
+	<meta property="og:image" content="https://code-fiesta.web.app/cf-meta-image.png" />
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://code-fiesta.web.app/" />
+	<meta property="twitter:title" content="CodeFiesta" />
+	<meta property="twitter:description" content="CodeFiesta is the flagship coding festival of Lucknow." />
+	<meta property="twitter:image" content="https://code-fiesta.web.app/cf-meta-image.png" />
 </head>
 
 <body>
