done with responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,35 @@
 			background-color: #000 !important;
 		}
 
+		.heading {
+			font-family: "Patua One", cursive;
+			animation: text-flicker 4s linear infinite;
+			text-transform: uppercase;
+			font-size: 4em;
+			text-align: center;
+			padding: 3.5% 0 2.5% 0;
+		}
+
+		.heading span {
+			color: #000;
+			background-color: #fe8d41;
+			padding: 0 7px;
+		}
+
 		body::-webkit-scrollbar {
 			display: none;
+		}
+
+		@media screen and (max-width: 651px) {
+			.heading {
+				font-size: 3em;
+			}
+		}
+
+		@media screen and (max-width:290px) {
+			.heading {
+				font-size: 2.5em;
+			}
 		}
 	</style>
 	<title>CodeFiesta</title>
